# V0.9

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analyze_logs.py  analyze_real_logs.py  base_orderbook.py  base_orderbook_manager.py  bithumb_msg_10.json  bithumb_msg_100.json  bithumb_msg_105.json  bithumb_msg_110.json  bithumb_msg_115.json  bithumb_msg_120.json  bithumb_msg_125.json  bithumb_msg_130.json  bithumb_msg_135.json  bithumb_msg_140.json  bithumb_msg_145.json  bithumb_msg_15.json  bithumb_msg_150.json  bithumb_msg_155.json  bithumb_msg_160.json  bithumb_msg_165.json  bithumb_msg_170.json  bithumb_msg_175.json  bithumb_msg_180.json  bithumb_msg_185.json  bithumb_msg_190.json  bithumb_msg_20.json  bithumb_msg_25.json  bithumb_msg_30.json  bithumb_msg_35.json  bithumb_msg_40.json  bithumb_msg_45.json  bithumb_msg_5.json  bithumb_msg_50.json  bithumb_msg_55.json  bithumb_msg_60.json  (+48 more)
backup/: base_ob.py  upbit_s_ob.py
backups/: bybit_f_sub.py.backup
docs/: orderbook_subscription_guide.md
examples/: upbit_example.py
find_pathway/: backtest_runner.py
find_pathway/legacy/: backtest_runner.py  optimized_processor.py
reports/: index.html  system_stats_report.json
reports/exchanges/binancefuture/: exchange_stats_report.json
reports/exchanges/upbit/: exchange_stats_report.json
scripts/: docker_build.sh  docker_clean.sh  run_orderbook.sh
src/: analyze_logs.py  metric_analyzer.py  requirements.txt  requirements_metric_analyzer.txt  run_metric_analysis.sh  test_bithumb.py  test_events.py
src/crosskimp/: __init__.py  main.py
src/crosskimp/calculator/: market_price_monitor.py
src/crosskimp/calculrator/: market_price_monitor.py
src/crosskimp/config/: __init__.py  bot_constants.py  config_loader.py  constants.py  constants_v3.py  ob_constants.py  paths.py  settings.json
src/crosskimp/domains/: process_types.py
src/crosskimp/logger/: logger.py
src/crosskimp/radar/: CMakeLists.txt  README.md  __init__.py  market_price_monitor.py  orderbook_shared_memory_design.md  processor.py  run_radar.py
src/crosskimp/radar/caching/: __init__.py  orderbook_cache.py
src/crosskimp/radar/find_pathway/: backtest_runner.py  optimized_processor.py
src/crosskimp/radar/include/: calculation_engine.h  orderbook_data.h  shared_memory_reader.h
src/crosskimp/radar/market_order/: market_order.py
src/crosskimp/radar/receiver/: __init__.py  batch_processor.py  data_receiver.py  queue_manager.py
src/crosskimp/radar/src/: calculation_engine.cpp  main.cpp  orderbook_data.cpp  shared_memory_reader.cpp
src/crosskimp/radar/transfer_fee/: filter_fees.py
src/crosskimp/radar/util/transfer_fee/: __init__.py  binance.py  bithumb.py  client.py  example.py  upbit.py
src/docs/: crosskimp_시뮬레이션_설계.md  crosskimp_핵심전략 copy.md  crosskimp_핵심전략.md  crosskimp_핵심전략_요약.md  withdrawal_fees_20250331_023719.csv
src/generated_events/: ob_collector_events.py  process_events_events.py
src/script/: monitor.py
src/tests/: analyze_cpp_logs.py  analyze_logs.py  binance_f_reconnect_test_results.md  metric_analyzer.py  mock_bybit_test.py  test_all_exchanges_reconnect.py  test_base_ws_manager.py  test_binance_f_ob_queue.py  test_binance_f_ob_update.py.bak  test_binance_f_reconnect.py  test_binance_f_reconnect_simple.py  test_binance_f_ws.py  test_binance_f_ws_single.py  test_binance_s_reconnect.py  test_bithumb.py  test_bithumb_reconnect.py  test_bybit_connection.py  test_bybit_connector.py  test_bybit_future_reconnect.py  test_bybit_reconnect.py  test_bybit_ws.py  test_cpp_orderbook.py  test_cpp_orderbook_with_data.py  test_telegram.py  test_upbit_orderbook.py  test_upbit_reconnect.py  메트릭분석가이드.md
src/tools/: read_binary.py  read_flatbuffers.py
temp/: fee_calculator.py  fee_integrator.py  get_all_fees_csv.py  get_binance_fees.py  get_bithumb_fees.py  get_upbit_fees.py  transfer_fees_20250330_145740.json  transfer_fees_20250330_150245.json  transfer_fees_20250330_150430.json
temp/api_results/: all_withdrawal_fees.json  binance_withdrawal_fees.json  withdrawal_fees_20250331_195511.csv
test/: bithumb_test_log.txt  bithumb_websocket_test.py
tests/: README.md  run_reconnect_test.py  test_live_websocket.py  test_websocket_reconnect.py
tests/services/: check_running_bots.py  debug_telegram_start.py  test_direct_telegram_message.py  test_orchestrator_telegram_message.py  test_telegram_commander.py  test_telegram_integration.py  test_telegram_message_sending.py  test_telegram_process.py  test_telegram_start_stop.py
tests/unit/: test_upbit_connection.py  test_upbit_connector.py  test_upbit_event_handler.py  test_upbit_simple_connect.py
(+338 files in other folders)
