[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crosskimp"
version = "0.6.0"
description = "CrossKimp Arbitrage Bot"
requires-python = ">=3.8"
authors = [
    { name = "CrossKimp Arbitrage Bot Team" }
]
dependencies = [
    # 비동기 HTTP 통신
    "aiohttp==3.8.3",
    "aiosignal==1.3.1",
    "async-timeout==4.0.2",
    "attrs==23.1.0",
    "charset-normalizer==2.1.1",
    "frozenlist==1.3.3",
    "multidict==6.0.4",
    "yarl==1.8.2",
    
    # 웹소켓 통신
    "websockets==10.4",
    
    # 로깅 및 시간 관련
    "python-dateutil==2.8.2",
    "six==1.16.0",
    "pytz==2023.3",
    
    # JSON 처리
    "ujson==5.7.0",
    
    # 텔레그램 봇
    "python-telegram-bot==13.7",
    "APScheduler==3.6.3",
    "cachetools==4.2.2",
    "tornado==6.1",
    "pytz-deprecation-shim==0.1.0.post0",
    "tzlocal==4.2",
    
    # 시스템 모니터링
    "psutil==5.9.0",
    
    # 웹소켓 모니터링
    "fastapi==0.95.0",
    "uvicorn[standard]==0.25.0",
    
    # 설정 변경 API
    "aiofiles==23.2.1",
    "watchdog==3.0.0",
    
    # 데이터 처리
    "numpy==1.24.3",
    "pandas==2.0.2",
    
    # 비동기 작업 관리
    "asyncio-throttle==1.0.2",
]

[project.optional-dependencies]
dev = [
    "black==22.3.0",
    "flake8==4.0.1",
    "mypy==0.982",
    "pytest==7.1.3",
    "pytest-asyncio==0.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crosskimp"] 